a place to start

--- a/index.html
+++ b/index.html
@@ -4,44 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- Google Fonts embed start -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+QLD&family=Playwrite+FR+Moderne&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- Google Fonts embed end -->
+    <!-- Google Icons embed start -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=music_note" />
+    <!-- Google Icons embed end -->
 </head>
 <body>
 
+    <header>
     <nav>
         <div>
-            <a href="">
-            Work
+            <a href="/">
+            Home
             </a>
         </div>
         <div>
             <a href="https://www.linkedin.com/in/johnmgreer/" target="_blank">
-            LinkedIn
+            About
             </a>
         </div>
         <div>
-            <a href="https://drive.google.com/file/d/1zgqCy4HS2WAbZUPEl-qUJWW7dv95qlX4/view?usp=sharing" target="_blank">
-            Resume
+            <a href="/portfolio" target="_blank">
+            Portfolio
+            </a>
+        </div>
+        <div>
+            <a href="https://greerplaysguitar.bandcamp.com/" target="_blank">
+            <span class="material-symbols-outlined">music_note</span>
             </a>
         </div>
     </nav>
+    </header>
 
+    <main>
     <section class="main-container">
-        <section class ="profile-container">
-            <h1>John Greer</h1>
+        <section class="profile-container" class="playwrite-au-qld">
+            <h1>John Greer,<br/>software + songs</h1>
         </section>
         <p>
             You can call me Greer 👋<br/>
             I'm an aspiring fullstack developer with a background in QA.<br/>
-            I like to build <a href="https://www.youtube.com/watch?v=0n4f-VDjOBE" target="_blank">happy little apps</a>, usually with Javascript.<br/>
+            I like to build <a href="https://www.youtube.com/watch?v=0n4f-VDjOBE" target="_blank">happy little apps</a>. You can check out my portfolio here.<br/>
+            In my free time, I also make music under the name John Gruyere.            
             I'm based in Atlanta, GA.<br/>
             </br>
             Check out some of my work below:<br/>
+            <ul>
+                <li>How Long To Read</li>
+                <li>LaToDo</li>
+                <li>Quick Mirror</li>
+                <li>Gratitudinator</li>
+                <li>Two Hundred Words</li>
+                <li>Coffee Book</li>
+                <li>Book Diary</li>
+                <li>Attentionator</li>
+                <li>Oscars List</li>
+            </ul>
         </p>
     </section>
+    </main>
 
     <footer>
-        🔨 I built this site using HTML, CSS, and just a pinch of Javascript.<br/>
-        📧 <a href="mailto:johnmorrisgreer@gmail.com">johnmorrisgreer@gmail.com</a>.<br/>
+        This website does not track your activity. Consider it <br/>
+        Check out the Colophon: *link-to-page* <br/>
+        Send me an email: johnmorrisgreer@gmail.com <br/>
     </footer>
 
 </body>
