--- a/index.html
+++ b/index.html
@@ -43,35 +43,30 @@
     <main>
     <section class="main-container">
         <section class="profile-container" class="playwrite-au-qld">
-            <h1>John Greer,<br/>software + songs</h1>
+            <h1>John Greer,<br/>web developer</h1>
         </section>
         <p>
-            You can call me Greer 👋<br/>
-            I'm an aspiring fullstack developer with a background in QA.<br/>
-            I like to build <a href="https://www.youtube.com/watch?v=0n4f-VDjOBE" target="_blank">happy little apps</a>. You can check out my portfolio here.<br/>
-            In my free time, I also make music under the name John Gruyere.            
-            I'm based in Atlanta, GA.<br/>
+            Based in Atlanta, GA.<br/>
             </br>
             Check out some of my work below:<br/>
             <ul>
-                <li>How Long To Read</li>
-                <li>LaToDo</li>
-                <li>Quick Mirror</li>
-                <li>Gratitudinator</li>
-                <li>Two Hundred Words</li>
-                <li>Coffee Book</li>
-                <li>Book Diary</li>
-                <li>Attentionator</li>
-                <li>Oscars List</li>
+                <li>How Long To Read: Estimate how long your next book will take to read. Built with Ruby on Rails.</li>
+                <li>LaToDo: Use lateral productivity to sort your to-do list. Built with React.</li>
+                <li>Compact Mirror: Check your front-facing camera before your next meeting. Built with Swift.</li>
+                <li>Gratitudinator: Reflect on what you're thankful for. Built with Svelte.</li>
+                <li>Two Hundred Words: Write a story using constraints. Built with ???.</li>
+                <li>Coffee Book: Browse pour-over coffee recipes. Built with Astro.</li>
+                <li>Book Diary: My personal reading journal. Built with Astro.</li>
+                <li>Attentionator: Sit with an image for five minutes. Built with ???.</li>
+                <li>Oscars Mayor Lister: Watch Best Picture Nominees. Built with Astro.</li>
             </ul>
         </p>
     </section>
     </main>
 
     <footer>
-        This website does not track your activity. Consider it <br/>
-        Check out the Colophon: *link-to-page* <br/>
-        Send me an email: johnmorrisgreer@gmail.com <br/>
+        This website does not track your activity. It aspires to the speed and privacy of the printed page. Thanks for reading! <br/>
+        📧 johnmorrisgreer@gmail.com <br/>
     </footer>
 
 </body>
