added new h1 font and some margin n padding

--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
     <section class="main-container">
         <section class="profile-container" class="playwrite-au-qld">
             <h1>John Greer,<br/>web developer</h1>
+            <h1 class="location-text">based in atlanta, ga</h1>
         </section>
         <p>
-            Based in Atlanta, GA.<br/>
-            </br>
             Check out some of my work below:<br/>
             <ul>
                 <li>How Long To Read: Estimate how long your next book will take to read. Built with Ruby on Rails.</li>
