updated some copy

--- a/index.html
+++ b/index.html
@@ -23,12 +23,17 @@
             </a>
         </div>
         <div>
-            <a href="https://www.linkedin.com/in/johnmgreer/" target="_blank">
+            <a href="/about">
             About
             </a>
         </div>
         <div>
-            <a href="/portfolio" target="_blank">
+            <a href="/blog">
+            Blog
+            </a>
+        </div>
+        <div>
+            <a href="/portfolio">
             Portfolio
             </a>
         </div>
@@ -47,7 +52,8 @@
             <h1 class="location-text">based in atlanta, ga</h1>
         </section>
         <p>
-            Check out some of my work below:<br/>
+            Hey there,
+            My name is John. I'm a web developer with a background in QA. I live in Atlanta with my family and keep up a practice of making music when I have the time. I like to explore a variety of creative mediums. You can view some of my work below.<hr/>
             <ul>
                 <li>How Long To Read: Estimate how long your next book will take to read. Built with Ruby on Rails.</li>
                 <li>LaToDo: Use lateral productivity to sort your to-do list. Built with React.</li>
@@ -65,7 +71,6 @@
 
     <footer>
         This website does not track your activity. It aspires to the speed and privacy of the printed page. Thanks for reading! <br/>
-        📧 johnmorrisgreer@gmail.com <br/>
     </footer>
 
 </body>
