more placeholder content

--- a/index.html
+++ b/index.html
@@ -54,17 +54,47 @@
         <p>
             Hey there,
             My name is John. I'm a web developer with a background in QA. I live in Atlanta with my family and keep up a practice of making music when I have the time. I like to explore a variety of creative mediums. You can view some of my work below.<hr/>
+            <h3>Basics</h3>
             <ul>
-                <li>How Long To Read: Estimate how long your next book will take to read. Built with Ruby on Rails.</li>
-                <li>LaToDo: Use lateral productivity to sort your to-do list. Built with React.</li>
-                <li>Compact Mirror: Check your front-facing camera before your next meeting. Built with Swift.</li>
-                <li>Gratitudinator: Reflect on what you're thankful for. Built with Svelte.</li>
-                <li>Two Hundred Words: Write a story using constraints. Built with ???.</li>
-                <li>Coffee Book: Browse pour-over coffee recipes. Built with Astro.</li>
-                <li>Book Diary: My personal reading journal. Built with Astro.</li>
-                <li>Attentionator: Sit with an image for five minutes. Built with ???.</li>
-                <li>Oscars Mayor Lister: Watch Best Picture Nominees. Built with Astro.</li>
+                <li>About me</li>
+                <li>Contact info</li>
+                <li>LinkedIn</li>
             </ul>
+            <h3>Code projects</h3>
+                <ul>
+                    <li>How Long To Read: Estimate how long your next book will take to read. Built with Ruby on Rails.</li>
+                    <li>LaToDo: Use lateral productivity to sort your to-do list. Built with React.</li>
+                    <li>Compact Mirror: Check your front-facing camera before your next meeting. Built with Swift.</li>
+                    <li>Gratitudinator: Reflect on what you're thankful for. Built with Svelte.</li>
+                    <li>Two Hundred Words: Write a story using constraints. Built with ???.</li>
+                    <li>Coffee Book: Browse pour-over coffee recipes. Built with Astro.</li>
+                    <li>Book Diary: My personal reading journal. Built with Astro.</li>
+                    <li>Attentionator: Sit with an image for five minutes. Built with ???.</li>
+                    <li>Oscars Mayor Lister: Watch Best Picture Nominees. Built with Astro.</li>
+                </ul>
+            <h3>Music projects</h3>
+                <ul>
+                    <li>Vessels</li>
+                    <li>Daily Doodles</li>
+                </ul>
+            <h3>Drawings</h3>
+                <ul>
+                    <li>Small Circles</li>
+                </ul>
+            <h3>Short stories</h3>
+                <ul>
+                    <li>Gazebo</li>
+                </ul>
+            <h3>Blog posts</h3>
+                <ul>
+                    <li>Gazebo</li>
+                </ul>
+            <h3>Reading lists</h3>
+                <ul>
+                    <li>2024</li>
+                    <li>2023</li>
+                    <li>2022</li>
+                </ul>
         </p>
     </section>
     </main>
