--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         </section>
         <p>
             Hey there,
-            My name is John. I'm a web developer with a background in QA. I live in Atlanta with my family and keep up a practice of making music when I have the time. I like to explore a variety of creative mediums. You can view some of my work below.<hr/>
+            My name is John. I'm a web developer with a background in QA. I live in Atlanta with my family and friends.<hr/>
+            I like to explore a variety of creative mediums. You can view some of my work below:
             <h3>Basics</h3>
             <ul>
                 <li>About me</li>
