more content and some styles

--- a/index.html
+++ b/index.html
@@ -23,11 +23,6 @@
             </a>
         </div>
         <div>
-            <a href="/about">
-            About
-            </a>
-        </div>
-        <div>
             <a href="/blog">
             Blog
             </a>
@@ -48,60 +43,61 @@
     <main>
     <section class="main-container">
         <section class="profile-container" class="playwrite-au-qld">
-            <h1>John Greer,<br/>web developer</h1>
-            <h1 class="location-text">based in atlanta, ga</h1>
+            
+            <h1>
+                <img src="images/profile-pic.jpeg" class="profile-picture"><br/>
+                John Greer,<br/>
+                web developer
+            </h1>
         </section>
         <p>
-            Hey there,
-            My name is John. I'm a web developer with a background in QA. I live in Atlanta with my family and friends.<hr/>
-            I like to explore a variety of creative mediums. You can view some of my work below:
+            Hey there, you can call me Greer. I'm a web developer with a background in QA. I live in Atlanta with my family and friends.
+        </p>
+        <hr/>
             <h3>Basics</h3>
             <ul>
-                <li>About me</li>
-                <li>Contact info</li>
-                <li>LinkedIn</li>
+                <li><a href="/">About</a></li>
+                <li><a href="/">Contact info</a></li>
             </ul>
-            <h3>Code projects</h3>
+            <h3>Code</h3>
                 <ul>
-                    <li>How Long To Read: Estimate how long your next book will take to read. Built with Ruby on Rails.</li>
-                    <li>LaToDo: Use lateral productivity to sort your to-do list. Built with React.</li>
-                    <li>Compact Mirror: Check your front-facing camera before your next meeting. Built with Swift.</li>
-                    <li>Gratitudinator: Reflect on what you're thankful for. Built with Svelte.</li>
-                    <li>Two Hundred Words: Write a story using constraints. Built with ???.</li>
-                    <li>Coffee Book: Browse pour-over coffee recipes. Built with Astro.</li>
-                    <li>Book Diary: My personal reading journal. Built with Astro.</li>
-                    <li>Attentionator: Sit with an image for five minutes. Built with ???.</li>
-                    <li>Oscars Mayor Lister: Watch Best Picture Nominees. Built with Astro.</li>
+                    <li><a href="/">Parks Party</a>: Find National Parks near you. Built with React.</li>
+                    <li><a href="/">How Long to Read</a>: Estimate how long your next book will take to read. Built with JavaScript.</li>
+                    <li><a href="/">LaToDo</a>: Use lateral productivity to sort your to-do list. Built with Svelte.</li>
+                    <li><a href="/">Compact Mirror</a>: Check your front-facing camera before your next meeting. Built with Swift.</li>
+                    <li><a href="/">Gratitudinator</a>: Reflect on what you're thankful for. Built with React.</li>
+                    <li><a href="/">Two Hundred Words</a>: Write a story using constraints. Built with ???.</li>
+                    <li><a href="/">Coffee Book</a>: Browse pour-over coffee recipes. Built with Astro.</li>
+                    <li><a href="/">Book Diary</a>: My personal reading journal. Built with Astro.</li>
+                    <li><a href="/">Attentionator</a>: Sit with an image for five minutes. Built with ???.</li>
+                    <li><a href="/">Oscars Mayor Lister</a>: Watch Best Picture Nominees. Built with Astro.</li>
                 </ul>
-            <h3>Music projects</h3>
+            <h3>Music</h3>
                 <ul>
-                    <li>Vessels</li>
-                    <li>Daily Doodles</li>
+                    <li><a href="/">Vessels</a>: Songs on Acoustic Guitar in Open C tuning.</li>
+                    <li><a href="/">Daily Doodles</a>: Short instrumentals.</li>
                 </ul>
-            <h3>Drawings</h3>
+            <h3>Visual Art</h3>
                 <ul>
-                    <li>Small Circles</li>
-                </ul>
-            <h3>Short stories</h3>
-                <ul>
-                    <li>Gazebo</li>
+                    <li><a href="/">Small Circles</a>: composite images</li>
                 </ul>
             <h3>Blog posts</h3>
                 <ul>
-                    <li>Gazebo</li>
+                    <li><a href="/">Reading in 2024</a>: everything I read, with commentary.</li>
+                    <li><a href="/">BSG Theme Analysis</a>: thoughts on Battlestar Gallactica</li>
+                    <li><a href="/">Tone Profiles</a>: AD9: presets for the Ibanez AD9 effects pedal.</li>
                 </ul>
-            <h3>Reading lists</h3>
+            <h3>Short stories</h3>
                 <ul>
-                    <li>2024</li>
-                    <li>2023</li>
-                    <li>2022</li>
+                    <li><a href="/">Story 1</a></li>
+                    <li><a href="/">Story 2</a></li>
                 </ul>
         </p>
     </section>
     </main>
 
     <footer>
-        This website does not track your activity. It aspires to the speed and privacy of the printed page. Thanks for reading! <br/>
+        This website does not track your activity. It aspires to the speed and privacy of the printed page.<br/>
     </footer>
 
 </body>
