added some more code entries

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     <main>
     <section class="main-container">
         <section class="profile-container" class="playwrite-au-qld">
-            
             <h1>
                 <img src="images/profile-pic.jpeg" class="profile-picture"><br/>
                 John Greer,<br/>
@@ -51,7 +50,15 @@
             </h1>
         </section>
         <p>
-            Hey there, you can call me Greer. I'm a web developer with a background in QA. I live in Atlanta with my family and friends.
+            Hey there, you can call me Greer. I live in Atlanta with my family and friends.
+            I work as a web developer and have a background in QA and tech support. 
+            I enjoy a variety of creative mediums. This website will point you to a lot of things I've made. You can also read my blog.
+            <br/>
+            <br/>
+            My latest for the blog: >>placeholder>>
+            <br/>
+            <br/>
+            Last updated: Jan 05, 2025
         </p>
         <hr/>
             <h3>Basics</h3>
@@ -61,12 +68,16 @@
             </ul>
             <h3>Code</h3>
                 <ul>
-                    <li><a href="/">Parks Party</a>: Find National Parks near you. Built with React.</li>
-                    <li><a href="/">How Long to Read</a>: Estimate how long your next book will take to read. Built with JavaScript.</li>
+                    <li><a href="https://github.com/johngreercodes/parks-party" target="_blank">Parks Party</a>: Find National Parks near you.</li>
+                    <li><a href="https://github.com/johngreercodes/how-long-to-read" target="_blank">How Long to Read</a>: Estimate how long your next book will take to read.</li>
+                    <li><a href="https://github.com/johngreercodes/pocket-knife" target="_blank">Pocket Knife</a>: Cut down your Pocket backlog.</li>
+                    <li><a href="https://github.com/johngreercodes/visionator" target="_blank">Visionator</a>: Generate mantras.</li>
+                    <li><a href="https://github.com/johngreercodes/goty-getter" target="_blank">GOTY Getter</a>: Find your next video game.</li>
                     <li><a href="/">LaToDo</a>: Use lateral productivity to sort your to-do list. Built with Svelte.</li>
                     <li><a href="/">Compact Mirror</a>: Check your front-facing camera before your next meeting. Built with Swift.</li>
                     <li><a href="/">Gratitudinator</a>: Reflect on what you're thankful for. Built with React.</li>
                     <li><a href="/">Two Hundred Words</a>: Write a story using constraints. Built with ???.</li>
+                    <li><a href="/">Spoon Red</a>: Stories one sentence at a time. Built with ???.</li>
                     <li><a href="/">Coffee Book</a>: Browse pour-over coffee recipes. Built with Astro.</li>
                     <li><a href="/">Book Diary</a>: My personal reading journal. Built with Astro.</li>
                     <li><a href="/">Attentionator</a>: Sit with an image for five minutes. Built with ???.</li>
@@ -80,12 +91,15 @@
             <h3>Visual Art</h3>
                 <ul>
                     <li><a href="/">Small Circles</a>: composite images</li>
+                    <li><a href="/">Local Flora 1</a>: nature of the neighborhood</li>
                 </ul>
             <h3>Blog posts</h3>
                 <ul>
+                    <li><a href="/">Writin' Wilderin'</a>: Development of a song for my next EP.</li>
                     <li><a href="/">Reading in 2024</a>: everything I read, with commentary.</li>
                     <li><a href="/">BSG Theme Analysis</a>: thoughts on Battlestar Gallactica</li>
                     <li><a href="/">Tone Profiles</a>: AD9: presets for the Ibanez AD9 effects pedal.</li>
+                    <li><a href="/">Onion Assurance</a>: An approach to testing.</li>
                 </ul>
             <h3>Short stories</h3>
                 <ul>
@@ -97,7 +111,10 @@
     </main>
 
     <footer>
-        This website does not track your activity. It aspires to the speed and privacy of the printed page.<br/>
+        This website does not track your activity. It aspires to the speed and privacy of the printed page.
+        <br/>
+        <br/>
+        Built with HTML and CSS.
     </footer>
 
 </body>
