copy and css vars

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1>
                 <img src="images/profile-pic.jpeg" class="profile-picture"><br/>
                 John Greer,<br/>
-                web developer
+                web dev 
             </h1>
         </section>
         <p>
