getting started with grid

--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
 
     <main>
     <section class="main-container">
-        <section class="profile-container" class="playwrite-au-qld">
+        <section class="profile-container">
             <h1>
                 <img src="images/profile-pic.jpeg" class="profile-picture"><br/>
                 John Greer,<br/>
-                web dev 
+                web dev<br/>
             </h1>
         </section>
-        <p>
-            Hey there, you can call me Greer. I live in Atlanta with my family and friends.
-            I work as a web developer and have a background in QA and tech support. 
-            I enjoy a variety of creative mediums. This website will point you to a lot of things I've made. You can also read my blog.
-            <br/>
-            <br/>
-            My latest for the blog: >>placeholder>>
-            <br/>
-            <br/>
-            Last updated: Jan 05, 2025
-        </p>
+        <section class="welcome-container">
+            <p>
+                Hey there, you can call me Greer. I live in Atlanta with my family and friends.<br/> 
+                You can read a little bit about me here.<br/> 
+                I enjoy a variety of creative mediums. This website will point you to a lot of things I've made.<br/>
+                <br/>
+                My latest: >>placeholder>>
+                <br/>
+            </p>
+        </section>
         <hr/>
+        <section class="index-container">
             <h3>Basics</h3>
             <ul>
                 <li><a href="/">About</a></li>
@@ -106,7 +106,7 @@
                     <li><a href="/">Story 1</a></li>
                     <li><a href="/">Story 2</a></li>
                 </ul>
-        </p>
+        </section>
     </section>
     </main>
 
