--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <!-- Google Icons embed end -->
 </head>
 <body>
-
+       _       _                  _   _                   
+  ___ | |__   | |__   ___ _   _  | |_| |__   ___ _ __ ___ 
+ / _ \| '_ \  | '_ \ / _ \ | | | | __| '_ \ / _ \ '__/ _ \
+| (_) | | | | | | | |  __/ |_| | | |_| | | |  __/ | |  __/
+ \___/|_| |_| |_| |_|\___|\__, |  \__|_| |_|\___|_|  \___|
+                          |___/                           
     <header>
     <nav>
         <div>
@@ -22,9 +27,14 @@
             Home
             </a>
         </div>
-        <div>
+        <div style="display: none;">
             <a href="/blog">
             Blog
+            </a>
+        </div>
+        <div>
+            <a href="https://www.linkedin.com/in/johnmgreer/" target="_blank">
+            LinkedIn
             </a>
         </div>
         <div>
@@ -51,11 +61,10 @@
         </section>
         <section class="welcome-container">
             <p>
-                Hey there, you can call me Greer. I live in Atlanta with my family and friends.<br/> 
-                You can read a little bit about me here.<br/> 
-                I enjoy a variety of creative mediums. This website will point you to a lot of things I've made.<br/>
+                I'm a web professional with a background in QA, a musician, and live in Atlanta with my family and friends.<br/>
+                I dabble in a variety of creative mediums. This website will point you to some things I've made.<br/>
                 <br/>
-                My latest: >>placeholder>>
+                My latest: <a href="https://greerplaysguitar.bandcamp.com/album/vessels" target="_blank">Vessels: An EP of acoustic songs</a>
                 <br/>
             </p>
         </section>
@@ -63,8 +72,8 @@
         <section class="index-container">
             <h3>Basics</h3>
             <ul>
-                <li><a href="/">About</a></li>
-                <li><a href="/">Contact info</a></li>
+                <li><a href="/coming-soon">About</a></li>
+                <li><a href="/coming-soon">Contact info</a></li>
             </ul>
             <h3>Code</h3>
                 <ul>
@@ -73,38 +82,38 @@
                     <li><a href="https://github.com/johngreercodes/pocket-knife" target="_blank">Pocket Knife</a>: Cut down your Pocket backlog.</li>
                     <li><a href="https://github.com/johngreercodes/visionator" target="_blank">Visionator</a>: Generate mantras.</li>
                     <li><a href="https://github.com/johngreercodes/goty-getter" target="_blank">GOTY Getter</a>: Find your next video game.</li>
-                    <li><a href="/">LaToDo</a>: Use lateral productivity to sort your to-do list. Built with Svelte.</li>
-                    <li><a href="/">Compact Mirror</a>: Check your front-facing camera before your next meeting. Built with Swift.</li>
-                    <li><a href="/">Gratitudinator</a>: Reflect on what you're thankful for. Built with React.</li>
-                    <li><a href="/">Two Hundred Words</a>: Write a story using constraints. Built with ???.</li>
-                    <li><a href="/">Spoon Red</a>: Stories one sentence at a time. Built with ???.</li>
-                    <li><a href="/">Coffee Book</a>: Browse pour-over coffee recipes. Built with Astro.</li>
-                    <li><a href="/">Book Diary</a>: My personal reading journal. Built with Astro.</li>
-                    <li><a href="/">Attentionator</a>: Sit with an image for five minutes. Built with ???.</li>
-                    <li><a href="/">Oscars Mayor Lister</a>: Watch Best Picture Nominees. Built with Astro.</li>
+                    <li><a href="/coming-soon">LaToDo</a>: Use lateral productivity to sort your to-do list. Built with Svelte.</li>
+                    <li><a href="/coming-soon">Compact Mirror</a>: Check your front-facing camera before your next meeting. Built with Swift.</li>
+                    <li><a href="/coming-soon">Gratitudinator</a>: Reflect on what you're thankful for. Built with React.</li>
+                    <li><a href="/coming-soon">Two Hundred Words</a>: Write a story using constraints. Built with ???.</li>
+                    <li><a href="/coming-soon">Spoon Red</a>: Stories one sentence at a time. Built with ???.</li>
+                    <li><a href="/coming-soon">Coffee Book</a>: Browse pour-over coffee recipes. Built with Astro.</li>
+                    <li><a href="/coming-soon">Book Diary</a>: My personal reading journal. Built with Astro.</li>
+                    <li><a href="/coming-soon">Attentionator</a>: Sit with an image for five minutes. Built with ???.</li>
+                    <li><a href="/coming-soon">Oscars Mayor Lister</a>: Watch Best Picture Nominees. Built with Astro.</li>
                 </ul>
             <h3>Music</h3>
                 <ul>
-                    <li><a href="/">Vessels</a>: Songs on Acoustic Guitar in Open C tuning.</li>
-                    <li><a href="/">Daily Doodles</a>: Short instrumentals.</li>
+                    <li><a href="https://greerplaysguitar.bandcamp.com/album/vessels">Vessels</a>: Songs on Acoustic Guitar in Open C tuning.</li>
+                    <li><a href="https://greerplaysguitar.bandcamp.com/album/morning-pages">Morning Pages</a>: Acoustic song sketches.</li>
+                    <li><a href="https://greerplaysguitar.bandcamp.com/album/daily-doodles">Daily Doodles</a>: Short instrumentals.</li>
                 </ul>
             <h3>Visual Art</h3>
                 <ul>
-                    <li><a href="/">Small Circles</a>: composite images</li>
-                    <li><a href="/">Local Flora 1</a>: nature of the neighborhood</li>
+                    <li><a href="/coming-soon">Small Circles</a>: composite images</li>
+                    <li><a href="/coming-soon">Local Flora 1</a>: nature of the neighborhood</li>
                 </ul>
             <h3>Blog posts</h3>
                 <ul>
-                    <li><a href="/">Writin' Wilderin'</a>: Development of a song for my next EP.</li>
-                    <li><a href="/">Reading in 2024</a>: everything I read, with commentary.</li>
-                    <li><a href="/">BSG Theme Analysis</a>: thoughts on Battlestar Gallactica</li>
-                    <li><a href="/">Tone Profiles</a>: AD9: presets for the Ibanez AD9 effects pedal.</li>
-                    <li><a href="/">Onion Assurance</a>: An approach to testing.</li>
+                    <li><a href="/coming-soon">Writin' Wilderin'</a>: Development of a song for my next record</li>
+                    <li><a href="/coming-soon">Reading in 2024</a>: everything I read, with commentary</li>
+                    <li><a href="/coming-soon">BSG Theme Analysis</a>: thoughts on Battlestar Gallactica</li>
+                    <li><a href="/coming-soon">Tone Profiles - AD9</a>: effects pedal presets</li>
+                    <li><a href="/coming-soon">Onion Assurance</a>: Testing with layers</li>
                 </ul>
             <h3>Short stories</h3>
                 <ul>
-                    <li><a href="/">Story 1</a></li>
-                    <li><a href="/">Story 2</a></li>
+                    <li><a href="/coming-soon">Coming soon</a></li>
                 </ul>
         </section>
     </section>
