--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
     <!-- Google Icons embed end -->
 </head>
 <body>
-       _       _                  _   _                   
-  ___ | |__   | |__   ___ _   _  | |_| |__   ___ _ __ ___ 
- / _ \| '_ \  | '_ \ / _ \ | | | | __| '_ \ / _ \ '__/ _ \
-| (_) | | | | | | | |  __/ |_| | | |_| | | |  __/ | |  __/
- \___/|_| |_| |_| |_|\___|\__, |  \__|_| |_|\___|_|  \___|
-                          |___/                           
+    <!--
+    oh hey there :)
+    -->                    
     <header>
     <nav>
         <div>
@@ -63,6 +60,7 @@
             <p>
                 I'm a web professional with a background in QA, a musician, and live in Atlanta with my family and friends.<br/>
                 I dabble in a variety of creative mediums. This website will point you to some things I've made.<br/>
+                <br/>
                 <br/>
                 My latest: <a href="https://greerplaysguitar.bandcamp.com/album/vessels" target="_blank">Vessels: An EP of acoustic songs</a>
                 <br/>
