hide portfolio nav item for now

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             LinkedIn
             </a>
         </div>
-        <div>
+        <div style="display: none;">
             <a href="/portfolio">
             Portfolio
             </a>
@@ -73,7 +73,7 @@
                 <li><a href="/coming-soon">About</a></li>
                 <li><a href="/coming-soon">Contact info</a></li>
             </ul>
-            <h3>Code</h3>
+            <h3 id="code-project-list">Code</h3>
                 <ul>
                     <li><a href="https://github.com/johngreercodes/parks-party" target="_blank">Parks Party</a>: Find National Parks near you.</li>
                     <li><a href="https://github.com/johngreercodes/how-long-to-read" target="_blank">How Long to Read</a>: Estimate how long your next book will take to read.</li>
