--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
         </section>
         <section class="welcome-container">
             <p>
-                I'm a web professional with a background in QA, a musician, and live in Atlanta with my family and friends.<br/>
+                I'm an engineer by day, a musician by night, and live all day long in Atlanta, Georgia with my family and friends.<br/>
+                <br/>
                 I dabble in a variety of creative mediums. This website will point you to some things I've made.<br/>
                 <br/>
+                My latest:<br/>
                 <br/>
-                My latest: <a href="https://greerplaysguitar.bandcamp.com/album/vessels" target="_blank">Vessels: An EP of acoustic songs</a>
+                <a href="https://greerplaysguitar.bandcamp.com/album/vessels" target="_blank">Vessels: songs on acoustic guitar in Open C tuning</a>
                 <br/>
             </p>
         </section>
