--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <section class="welcome-container">
             <p>
                 I'm an engineer by day, a musician by night, and live all day long in Atlanta, Georgia with my family and friends.<br/>
+                I'm currently a Quality Engineer at <a href="https://calendly.com/" target="_blank">Calendly</a>, and previously worked at other Atlanta spots like <a href="https://mailchimp.com/" target="_blank">Mailchimp</a> and <a href="https://greenlight.com/" target="_blank">Greenlight</a>.<br/>
                 <br/>
                 I dabble in a variety of creative mediums. This website will point you to some things I've made.<br/>
                 <br/>
